k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-backend
  namespace: cloudmart
spec:
  selector:
    app: cloudmart-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
