k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-frontend
  namespace: cloudmart
spec:
  selector:
    app: cloudmart-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
