k8s/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-mongo
  namespace: cloudmart
spec:
  clusterIP: None
  selector:
    app: cloudmart-mongo
  ports:
    - port: 27017
      targetPort: 27017
